cluster/apps/default/your-spotify/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: your-spotify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: your-spotify
  template:
    metadata:
      labels:
        app: you-spotify
    spec:
      containers:
        - name: server
          image: yooooomi/your_spotify_server
          ports:
            - containerPort: 8080
        - name: web
          image: yooooomi/your_spotify_client
          ports:
            - containerPort: 3000
      volumes:
        - name: mongo-data
          emptyDir: {}
