cluster/apps/default/your-spotify/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: your-spotify
  namespace: default
spec:
  selector:
    app: your-spotify
  ports:
    - name: web
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: api
      protocol: TCP
      port: 3000
      targetPort: 3000
