cluster/apps/default/your-spotify/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: your-spotify
  namespace: default
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "connection"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    external-dns.alpha.kubernetes.io/target: "${SECRET_CLOUDFLARE_TUNNEL_DOMAIN}"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-your-spotifystrip-api-prefix@kubernetescrd,networking-cloudflarewarp@kubernetescrd"
spec:
  ingressClassName: traefik
  tls:
    - secretName: "${SECRET_LAB_DOMAIN/./-}-tls"
      hosts:
        - spotify.${SECRET_LAB_DOMAIN}
  rules:
    - host: spotify.${SECRET_LAB_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: your-spotify
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: your-spotify
                port:
                  number: 8080
